30Dec13=======================================================================
1. Add CTY2312 prefix changes
19Nov13=======================================================================
1. Add CTY2311 Prefix changes - needed for CQWW 2013
09Oct13=======================================================================
1. Add CTY2310 prefix changes
13Sep13=======================================================================
1. Added CTY2309 prefix data, together with its associated wpxloc.raw file.
10Sep13=======================================================================
1. Add the get/keps command, which allows a sysop to get the latest AMSAT
   keplarian elements either on demand or periodically in the crontab.
10Sep13=======================================================================
1. Fix sh/time such that no arguments print details for the caller.
09Sep13=======================================================================
1. Make all the Net::Telnet based commands (sh/425, sh/contest, sh/db0sdx,
   sh/wm7d, sh/ik3qar) asynchronous, so that they no longer pause the node
   while they go off and query the internet for results.
06Sep13=======================================================================
1. Fixed sh/contest so that it works again. How it ever worked at all is
   a bit of a mystery. Now possible to type sh/cont dec or sh/cont dec 2013
   (with month and year in any order). Please comment out any $contest_host
   or $contest_url variables you may have in /spider/local/Internet.pm (if
   you have one, that is). It will not work with the previous values.
2. Added CTY2308 prefix changes.
3. Added (back) internal function support inside commands. This allows
   commands to create functions inside the <cmd_name>.pl files. There are
   now also standard function names that can do special things.
24Jul13=======================================================================