@@ -1,3 +1,8 @@
+12Jan14=======================================================================
+1. Fix minor issue with dx command when used in a script, as found by
+   Christian Furst.
+2. Fix (rather serious) error in import_cmd that did not reset callsigns
+   correctly in $main::me.
 30Dec13=======================================================================
 1. Add CTY2312 prefix changes
 19Nov13=======================================================================
